# qtbridge2controls

./: CMakeLists.txt  main.cpp  main.qml  qt-controls-createstyle.pro
data/: testdata.qtbridge
figma/: Learning_Figma.metadata  Learning_Figma.qtbridge
src/: jsontools.cpp  jsontools.h  main.cpp  qtbridgereader.h  stylegenerator.cpp  stylegenerator.h
templates/controls/: Button.qml  CheckBox.qml  Switch.qml  qmldir
